Auto-open jdk.compiler modules at processor load time
Consumers no longer need --add-exports flags in their build configuration.
The annotation processor opens jdk.compiler/com.sun.tools.javac.* packages
automatically via a static initializer that runs before any javac-internal
class is resolved:

  1. Obtain sun.misc.Unsafe from jdk.unsupported (always exported)
  2. Use Unsafe.staticFieldOffset + getObject to steal the privileged
     MethodHandles.Lookup.IMPL_LOOKUP handle
  3. Use that lookup to invoke Module.implAddOpens(String) on
     jdk.compiler for each target package

Same technique Lombok uses; verified on JDK 17, 21, and 25. Silent
fallback when the reflective bootstrap fails (SecurityManager, future
Unsafe removal) so consumers can still pass --add-exports manually.

Version-gated via JavacAccess / JavacAccessFactory / JavacAccessV17
mirroring the existing JavacCompat design - future JDK hardening is
absorbed by a new shim subclass plus one gate in the factory.

Showcase compileShowcaseJava no longer needs fork + JVM args.
README consumer-setup section simplified (--add-exports snippets removed).
CHANGELOG updated under [1.2.0].